--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,11 @@
 ---
 # This manifest deploys a Python Flask application with a Redis database
 applications:
-- name: nyu-lab-bluemix-jr
+- name: nyu-lab-bluemix-DaHuo
   memory: 64M
   instances: 1
   #random-route: true
-  host: nyu-lab-bluemix-jr
+  host: nyu-lab-bluemix-DaHuo
   domain: mybluemix.net
   path: .
   disk_quota: 512M
